--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google-cloud/storage": "^2.5.0",
     "firebase": "^5.9.2",
     "moment": "^2.24.0",
     "react": "^16.8.6",
